--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "@shopify/shopify-app-remix": "^3.0.2",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
     "isbot": "^5.1.0",
-    "prisma": "^5.11.0",
+    "prisma": "^5.18.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.3.3",
-    "vite-tsconfig-paths": "^5.0.1"
+    "remix": "^2.11.2",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@remix-run/eslint-config": "^2.7.1",
@@ -52,7 +52,8 @@
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.4",
     "typescript": "^5.2.2",
-    "vite": "^5.1.3"
+    "vite": "^5.1.3",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "workspaces": [
     "extensions/*"
